# AntiProcTaskTracker

./: CMakeLists.txt  README.md  countingtaskmodel.cpp  countingtaskmodel.h  edittaskmodel.cpp  edittaskmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskitem.h  taskmodel.h  tasktimedelegate.h  tasktypedelegate.cpp  tasktypedelegate.h
